noinst_HEADERS = \
	opx/sdi_nvram_resource_attr.h \
	opx/sdi_pmbus_dev.h \
	opx/sdi_cpld.h \
	opx/sdi_sf_tmp_attr.h \
	opx/sdi_sfp.h \
	opx/sdi_sf_io_bus.h \
	opx/sdi_onie_eeprom.h \
	opx/sdi_qsfp.h \
	opx/sdi_qsfp_reg.h \
	opx/sdi_tmp75_reg.h \
	opx/sdi_sf_entity_info_attr.h \
	opx/sdi_max6620.h \
	opx/sdi_i2cmux_pin.h \
	opx/sdi_cpld_driver_attr.h \
	opx/sdi_pin_bus_attr.h \
	opx/sdi_fan_resource_attr.h \
	opx/sdi_temperature_resource_attr.h \
	opx/sdi_eeprom.h \
	opx/eeprom/genericideeprom.h \
	opx/sdi_i2cdev.h \
	opx/sdi_comm_dev_attr.h \
	opx/sdi_dell_eeprom.h \
	opx/sdi_emc142x_reg.h \
	opx/sdi_entity_info_resource_attr.h \
	opx/sdi_common_attr.h \
	opx/sdi_max6699_reg.h \
	opx/sdi_media_attr.h \
	opx/sdi_media_phy_mgmt.h \
	opx/sdi_gpio.h \
	opx/sdi_device_common.h \
	opx/sdi_sysfs_gpio_helpers.h \
	opx/sdi_sf_fan_attr.h \
	opx/sdi_sf_io_bus_attr.h \
	opx/sdi_cpld_attr.h \
	opx/sdi_sfp_reg.h \
	opx/sdi_emc2305.h \
	opx/sdi_i2c_mux_attr.h \
	opx/sdi_bus_attr.h \
	opx/sdi_i2cmux_pca.h

